2001-03-14  Frank Warmerdam  <warmerdam@pobox.com>

	* added nad/epsg database of translations between EPSG PCS/GCS
	codes and PROJ.4 definitions.

2001-02-24  Frank Warmerdam  <warmerdam@pobox.com>

	* Include +ellps in proj example as per suggestion from Michael
	DeChaine.

2001-02-07  Frank Warmerdam  <warmerdam@pobox.com>

	* Cleaned up various warnings when compiled with -Wall.

2001-02-03  Frank Warmerdam  <warmerdam@pobox.com>

	* Added cs2cs.1 man page, and minor updates to nad2nad.1 and proj.1.

	* Added pj_transform docs to pj_init.3.

2001-01-25  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed pj_init() check for WGS84 match as per Bart Adriaanse bug rep.

2000-12-15  Frank Warmerdam  <warmerdam@pobox.com>

	* src/makefile.vc: only delete proj.lib if it exists.

2000-12-01  Frank Warmerdam  <warmerdam@pobox.com>

	* Added proj.def to extra_dist in src/Makefile.am.

2000-11-29  Frank Warmerdam  <warmerdam@pobox.com>

	* Changed strtod() to proj_strtod() in strtod.c, and make use
	of it in dmstor() to avoid having stuff like "5d10" interpreted
	as exponential notation on MSVC.

2000-11-18  Frank Warmerdam  <warmerda@cs46980-c>

	* Patch from Craig Bruce to adjlon.c to avoid wrong results, 
	and near-hangs when adjusting very large numbers. 
	http://bugzilla.remotesensing.org/show_bug.cgi?id=27

Rel. 4.4.2 2000/09/22
-------------------------------------------------------------------------
	
2000-09-22  Frank Warmerdam  <warmerda@cs46980-c>

	* Fixed src/Makefile.am install-exec-local target, and added
	geocent.h, and emess.h.  Reissued 4.4.2 distribution files.

	* Update version to 4.4.2, in preparation for 4.4.2 release.

	* Ensure makefile.vc is distributed, and mention windows building
	in README.

	* Cast args to freev2() in bch2bps.c, and mk_cheby.c to avoid errors
	on the Cray.

2000-09-21  Frank Warmerdam  <warmerda@cs46980-c>

	* Added "sphere" to pj_ellps.c. 

2000-07-06  Frank Warmerdam  <warmerda@cs46980-c>
